--- a/hall-of-fame-shame/index.html
+++ b/hall-of-fame-shame/index.html
@@ -9,6 +9,25 @@ Date: Sept.23.22
   <title>Hall of Fame or Shame (Saftey)</title>
 </head>
 <body>
-
+  <img src="assets/P3.JPG" style="width: 750px;"><br>
+  <p>Link: <a href="https://web.whatsapp.com/" target="_blank">https://web.whatsapp.com/</a></p>
+  <br>
+  <h2>I Like</h2>
+  <ul>
+    <li>The non complicated features</li>
+    <li>Straight Forward interface</li>
+    <li>Easy to learn navigation</li>
+  </ul>
+  <h2>I Wish</h2>
+  <ul>
+    <li>Delete feature was different</li>
+    <li>The Delete feature doesnt show recipient that you deleted a message</li>
+    <li>There was a way to choose the correct deleting option after accidentaly pressing one.</li>
+  </ul>
+  <h2>What if</h2>
+  <ul>
+    <li>The Delete feature actually doesnt show that you deleted a measure</li>
+    <li>There was a way to undo the deleting option for a longer period of time.</li>
+  </ul>
 </body>
 </html>
