--- a/expenses/writeup.html
+++ b/expenses/writeup.html
@@ -10,6 +10,13 @@ Date: Sept.22.23
 	<title>Differences between spreadsheet-like app and your newer app</title>
 </head>
 <body>
-
+	<p>With my new app you will be able to:</p>
+	<ul>
+		<li>Have a better understanding of how you structure your data.</li>
+		<li>Quickly Analyse the data.</li>
+		<li>More efficiently insert data.</li>
+	</ul>
+	<p>Though there are some glitches present, given more time my app will be able to fully outperform spreadsheet app in managing expenses.</p>
+	
 </body>
 </html>
